# clamdpy

./: CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  tox.ini
.github/workflows/: lint.yml  tests.yml
src/clamdpy/: __init__.py  exceptions.py  models.py  sockets.py  typing.py
tests/: test_sockets.py
