[build-system]
requires = ["setuptools>=60.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clamdpy"
description = "A Python wrapper around clamd, the ClamAV daemon"
authors = [
    {name = "Viicos", email = "65306057+Viicos@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed"
]
license = {file = "LICENSE"}
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Viicos/clamdpy"
Source = "https://github.com/Viicos/clamdpy"
Changelog = "https://github.com/Viicos/clamdpy/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = {attr = "clamdpy.__version__"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"clamdpy" = ["py.typed"]

[tool.black]
line-length = 120

[tool.ruff]
select = [
    "E",  # pycodestyle (E)
    "W",  # pycodestyle (W)
    "F",  # Pyflakes
    "UP", # pyupgrade
    "I",  # isort
    "PL", # Pylint
]
line-length = 120
src = ["src"]
ignore = ["E501", "PLR0913"]

[tool.ruff.isort]
known-first-party = ["clamdpy"]

[tool.pytest.ini_options]
pythonpath = "src"
